2013-08-08 James Ferrando  <james.ferrando@cern.ch>

	* Added several backwards-compatibility updates for fortran and C++ interfaces based on 6.0.0 feedback from David Hall 
	and Marek Schoenherr

2013-08-07  Andy Buckley  <andy.buckley@cern.ch>

	* 6.0.0 release!

2013-08-06  Andy Buckley  <andy.buckley@cern.ch>

	* Various remaining build system tweaks and updating the version
	code to 6.0.0rc in anticipation of release!

	* Added the lhaglue_get_current_pdf(nset=1) function for C++
	access to the currently-used PDF via LHAGlue (intended as a
	workaround for cases where the old LHAPDF banner was grepped to
	work out the PDF identities).

2013-08-05  Andy Buckley  <andy.buckley@cern.ch>

	* Adding subgridded alpha_s interpolation.

	* Enhancing plotting and comparison scripts for alpha_s comparison.

2013-07-31  Andy Buckley  <andy.buckley@cern.ch>

	* Changing the Q2Min,Max flags to QMin,Max for better readability, etc. PDF and creategrids updated.

2013-07-30  Andy Buckley  <andy.buckley@cern.ch>

	* Adding a migration/cmpplotv5v6 batch script and improving the accuracy measure definition.

2013-07-29  Andy Buckley  <andy.buckley@cern.ch>

	* Changing the data format to list PDF Q knot values rather than Q2, for readability.

	* Fixing creategrids to respect flavour thresholds and subgrids with a --subgrids flag.

2013-07-12  Andy Buckley  <andy.buckley@cern.ch>

	* Version number bump and tag as 6.0.0b3. Nearly ready for stable release!

	* Renaming LambdaX config flags to AlphaS_LambdaX, since their use is alpha_s-specific.

2013-07-10  Andy Buckley  <andy.buckley@cern.ch>

	* Adding --top flag to creategrids, for dumping the 13-flavour NNPDF grids.

	* Adding dumping of alpha_s values to dumpv5v6. Some apparent alpha_s ipol problems for CTEQ6L1.

2013-07-08  Andy Buckley  <andy.buckley@cern.ch>

	* Adding factory methods for making AlphaS objects direct from set names / member numbers.
